# sentinel-optimizer

./: .gitmodules  Cargo.toml  Makefile  README.md  hall_of_fame.json  optimization_audit_log.csv
scripts/: inject_dna.sh
src/: audit.rs  evolution.rs  main.rs  settings.md  settings.rs  simulator.rs
src/evolution/: tests.rs
