# ========== DOSYA: sentinel-optimizer/Cargo.toml ==========
[package]
name = "sentinel-optimizer"
version = "2.0.0"
edition = "2021"
description = "VQ-Capital V9 In-Memory Singularity Engine (Rayon Parallelized)"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rayon = "1.8" # 🚀 KUANTUM HIZI: Tüm CPU çekirdeklerini kullanır
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }

# 🔥 YENİ: Kendi saf mantık çekirdeğimiz!
sentinel-core = { path = "../sentinel-core" }